@@ -47,7 +47,7 @@ span.block	{display:block;}
 .wrap_iati_identifier .text a	{font-size:18px; padding-left:5px;}
 .wrap_description			{margin:40px auto;}
 .wrap_description .text		{margin-bottom:30px;}
-.wrap_description .text .narrative					{line-height:1.35em;}
+.wrap_description .text .narrative					{font-size:1.0em; word-spacing:0.05em; line-height:1.5em; white-space:pre-line; unicode-bidi:embed;}
 .wrap_description .text .narrative:nth-of-type(2)	{font-style:italic; display:block; margin-top:15px;}
 .wrap_default				{padding:20px 0 0 0; margin:0 auto;}
 .wrap_default .text			{display:inline-block; vertical-align:top; font-size:14px; color:#ccc; width:50%;}
@@ -127,9 +127,14 @@ span.doc_date	{background-color:rgba(48,71,103,1);}
 span.doc_rec	{background-color:rgba(22,24,37,0.6);}
 
 /*	CONTACT INFO	*/
-.wrap_contact_info					{width:980px; margin:0 0 20px -50px; padding:20px 40px; font-size:18px; line-height:1.5em; background-color:rgba(17,46,105,0.9);}
+.wrap_contact_info					{width:980px; margin:0 0 20px -50px; padding:20px 40px; font-size:16px; line-height:1.5em; background-color:rgba(17,46,105,0.9);}
 .wrap_contact_info:last-of-type 	{padding-bottom:30px;}
 .wrap_contact_info:nth-of-type(1) 	{padding-top:30px; width:900px; margin-left:-10px;}
+.wrap_contact_org					{font-weight:bold;}
+.wrap_contact_name					{font-size:20px; padding-top:10px;}
+.wrap_contact_title					{font-style:italic;}
+.wrap_contact_tel					{font-size:18px; padding-top:5px;}
+.wrap_contact_type					{font-size:12px; text-transform:uppercase; padding-bottom:10px;}
 
 /*	DATES	*/
 .wrap_activity_date	{position:relative; width:980px; height:82px; margin-left:-50px;}
@@ -315,6 +320,9 @@ table.budget.result td:nth-of-type(3)		{width:500px; padding-right:0px;}
 .wrap_tag table.budget th.tag_vocab,
 .wrap_tag table.budget td.tag_vocab		{width:200px; padding-right:40px;}
 
+/*	IATI ACTIVITY RELATED ACTIVITY TABLE	*/
+.wrap_related_activity th.related_ref,
+.wrap_related_activity td.related_ref	{width:480px; padding-right:40px;}
 
 /*	DEFAULTS MODALITIES	*/
 table.modals					{table-layout:fixed; border-collapse:collapse; width:100%;}
