@@ -2,6 +2,9 @@ Development Portal (2020-02-06 shi)
 ==============================
 Update contact-info
 Update comments
+Add tag to new SAVi
+Update css
+Add related-activity
 
 
 Development Portal (2020-02-05 shi)
